--- a/OnlineFishShop.Web/Views/Shared/_LoginPartial.cshtml
+++ b/OnlineFishShop.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,18 +1,22 @@
 @using Microsoft.AspNetCore.Identity
 @using OnlineFishShop.Data.Models
+@using OnlineFishShop.Common.Resources
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-
+<environment include="Development">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+</environment>
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav">
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@OnlineFishShopResources.lblHello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link" style="color:#abdff1">@OnlineFishShopResources.lblLogout</button>
             </li>
         </ul>
     </form>
@@ -20,7 +24,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-        <li><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+        <li><a asp-area="Identity" asp-page="/Account/Register">@OnlineFishShopResources.lblRegister</a></li>
+        <li><a asp-area="Identity" asp-page="/Account/Login">@OnlineFishShopResources.lblLogin</a></li>
     </ul>
 }
