--- a/OnlineFishShop.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/OnlineFishShop.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
 @model LoginModel
+@using OnlineFishShop.Common.Resources
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = OnlineFishShopResources.lblLogin;
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -10,16 +11,16 @@
     <div class="col-md-4">
         <section>
             <form method="post">
-                <h4>Use a local account to log in.</h4>
+                <h4>@OnlineFishShopResources.lblAccountLogin</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Input.Email"></label>
+                    <label asp-for="Input.Email">@OnlineFishShopResources.lblEmail</label>
                     <input asp-for="Input.Email" class="form-control" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Input.Password"></label>
+                    <label asp-for="Input.Password">@OnlineFishShopResources.lblPassword</label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
@@ -27,19 +28,19 @@
                     <div class="checkbox">
                         <label asp-for="Input.RememberMe">
                             <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
+                            @OnlineFishShopResources.lblRememberMe
                         </label>
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Log in</button>
+                    <button type="submit" class="btn btn-default">@OnlineFishShopResources.lblLogin</button>
                 </div>
                 <div class="form-group">
                     <p>
-                        <a asp-page="./ForgotPassword">Forgot your password?</a>
+                        <a asp-page="./ForgotPassword">@OnlineFishShopResources.lblForgotPassword</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">@OnlineFishShopResources.lblRegisterNew</a>
                     </p>
                 </div>
             </form>
@@ -47,7 +48,7 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h4>Use another service to log in.</h4>
+            <h4>@OnlineFishShopResources.lblSocial</h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
