--- a/OnlineFishShop.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/OnlineFishShop.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model RegisterModel
+@using OnlineFishShop.Common.Resources
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = OnlineFishShopResources.lblRegister;
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -9,30 +10,30 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
+            <h4>@OnlineFishShopResources.lblRegisterNew</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Username"></label>
+                <label asp-for="Input.Username">@OnlineFishShopResources.lblUsername</label>
                 <input asp-for="Input.Username" class="form-control" />
                 <span asp-validation-for="Input.Username" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label asp-for="Input.Email">@OnlineFishShopResources.lblEmail</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password"></label>
+                <label asp-for="Input.Password">@OnlineFishShopResources.lblPassword</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
+                <label asp-for="Input.ConfirmPassword">@OnlineFishShopResources.lblConfirmPassword</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btn btn-default">@OnlineFishShopResources.lblRegister</button>
         </form>
     </div>
 </div>
