--- a/OnlineFishShop.Web/wwwroot/css/site.css
+++ b/OnlineFishShop.Web/wwwroot/css/site.css
@@ -2,7 +2,7 @@
 for details on configuring this project to bundle and minify static web assets. */
 body {
     padding-top: 50px;
-    padding-bottom: 20px;
+    background-color: #e1dddb;
 }
 
 /* Wrapping element */
@@ -35,3 +35,51 @@ body {
         display: none;
     }
 }
+
+/*Layout abdff1*/
+
+.row > a > .img-responsive {
+    width: 100%;
+    height: 300px;
+    display: block;
+}
+
+.navbar-brand{
+    color: #abdff1 !important;
+}
+.bg-company-blue {
+    background-color: #0c4a60;
+}
+nav .navbar-nav li a {
+    color: #abdff1 !important;
+}
+.navbar-toggle {
+    background-color: #abdff1;
+}
+.navbar-toggle .icon-bar {
+    background-color: black;
+}
+body {
+    padding-top: 350px;
+    min-height:600px;
+}
+footer{
+    width:100%;
+}
+footer p {
+   color: #abdff1;
+}
+@media screen and (max-width:1200px) {
+    .nav-button {
+        font-size: 18px;
+        margin-right: 10px;
+    }
+}
+@media screen and (min-width:1200px) {
+    .nav-button {
+        font-size: 18px;
+        margin-right: 100px;
+    }
+}
+
+
