--- a/OnlineFishShop.Web/Views/Shared/_Layout.cshtml
+++ b/OnlineFishShop.Web/Views/Shared/_Layout.cshtml
@@ -84,9 +84,21 @@
         <hr />
     </div>
     <footer class="bg-company-blue">
-        <p class="footer-paragraph">&copy; @OnlineFishShopResources.lblCopyright</p>
-        <p class="footer-paragraph">@OnlineFishShopResources.lblTheSilvexShop</p>
-        <p class="footer-paragraph">@OnlineFishShopResources.lblRightsReserved</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-md-5 col-sm-4 col-xs-4">
+                    <p class="footer-paragraph">&copy; @OnlineFishShopResources.lblCopyright</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-3 col-xs-3">
+                    <p class="footer-paragraph">@OnlineFishShopResources.lblTheSilvexShop</p>
+
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                    <p class="footer-paragraph">@OnlineFishShopResources.lblRightsReserved</p>
+                </div>
+            </div>
+         </div>
+
     </footer>
 
 
