--- a/OnlineFishShop.Web/Areas/Admin/Views/Users/Index.cshtml
+++ b/OnlineFishShop.Web/Areas/Admin/Views/Users/Index.cshtml
@@ -4,9 +4,10 @@
     ViewBag.Title = "Manage Users";
     Layout = "_Layout";
 }
+<link rel="stylesheet" href="~/css/site.css" />
 
 <div class="bg0 m-t-23 p-b-140">
-    <div class="container">
+    <div class="container-manage">
         <h2>Manage Users</h2>
 
         <table class="table table-striped">
