--- a/OnlineFishShop.Web/wwwroot/css/site.css
+++ b/OnlineFishShop.Web/wwwroot/css/site.css
@@ -38,13 +38,14 @@ body {
 
 /*Layout abdff1*/
 
-.row > a > .img-responsive {
-    width: 100%;
-    height: 300px;
-    display: block;
+.row#header-image {
+    background-image: url(/images/silvex_site.png);
+    background-repeat: no-repeat;
+    background-size:cover;
+    padding: 0 0 14%;
 }
 
-.navbar-brand{
+.navbar-brand {
     color: #abdff1 !important;
 }
 .bg-company-blue {
@@ -84,5 +85,22 @@ footer p {
 }
 
 .container-manage{
-    margin-top:80px;
+    margin-top:60px;
+}
+
+.page-title {
+    color: #0c4a60;
+    text-align:center;
+    font-weight:bold;
+}
+.page-subtitle {
+    color: #ef6c33;
+    text-align: center;
+    font-weight: bold;
+}
+
+.page-tеxt {
+    font-size: 20px;
+    text-align: center;
+    color: #0c4a60;
 }
