--- a/OnlineFishShop.Web/Views/Home/About.cshtml
+++ b/OnlineFishShop.Web/Views/Home/About.cshtml
@@ -31,6 +31,16 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <p class="page-tеxt">@Html.Raw(OnlineFishShopResources.lblBankPayment)</p>
         </div>
-
+    </div>
+    <div class="row-images">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 input-position text-center">
+            <img src="~/images/visa_logo.png" class="img-thumbnail" id="payment-img">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 input-position text-center">
+            <img src="~/images/mastercard-logo.png" class="img-thumbnail" id="payment-img">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 input-position text-center">
+            <img src="~/images/paypal-logo.png" class="img-thumbnail" id="payment-img">
+        </div>
     </div>
 </div>
