--- a/OnlineFishShop.Web/wwwroot/css/site.css
+++ b/OnlineFishShop.Web/wwwroot/css/site.css
@@ -104,3 +104,13 @@ footer p {
     text-align: center;
     color: #0c4a60;
 }
+
+#payment-img {
+    margin-top:5%;
+    width: 250px; /* You can set the dimensions to whatever you want */
+    height: 200px;
+    object-fit: cover;
+}
+.row-images{
+    align-content:center
+}
