--- a/OnlineFishShop.Web/wwwroot/css/site.css
+++ b/OnlineFishShop.Web/wwwroot/css/site.css
@@ -76,11 +76,37 @@ footer p {
         font-size: 18px;
         margin-right: 10px;
     }
+    .page-subtitle-left {
+        color: #ef6c33;
+        text-align: center;
+        font-weight: bold;
+        font-size: 16px;
+    }
+    #contact-img {
+        width: 100px; /* You can set the dimensions to whatever you want */
+        height: 100px;
+        object-fit: cover;
+        margin-bottom: 1.5%
+    }
+    
+
 }
 @media screen and (min-width:1200px) {
     .nav-button {
         font-size: 18px;
         margin-right: 100px;
+    }
+    .page-subtitle-left {
+        color: #ef6c33;
+        text-align: left;
+        font-weight: bold;
+        font-size: 16px;
+    }
+    #contact-img {
+        width: 100px; /* You can set the dimensions to whatever you want */
+        height: 100px;
+        object-fit: cover;
+        margin-bottom: 5%
     }
 }
 
@@ -99,6 +125,8 @@ footer p {
     font-weight: bold;
 }
 
+
+
 .page-tеxt {
     font-size: 20px;
     text-align: center;
@@ -111,6 +139,15 @@ footer p {
     height: 200px;
     object-fit: cover;
 }
+
 .row-images{
     align-content:center
+}
+
+#submit-btn {
+    background-color: #ef6c33 !important;
+}
+#border-input {
+    border:solid;
+    border-color: #ef6c33 !important;
 }
