Products page design
Most of the products page design is done.
Added check if the user is admin - to hide or show the create new option.

--- a/OnlineFishShop.Web/Areas/Products/Views/Home/Index.cshtml
+++ b/OnlineFishShop.Web/Areas/Products/Views/Home/Index.cshtml
@@ -1,77 +1,35 @@
 ﻿@model IEnumerable<OnlineFishShop.Data.Models.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = OnlineFishShopResources.lblProducts;
 }
+@using OnlineFishShop.Common.Resources
 
-<h2>Index</h2>
+<environment include="Development">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+</environment>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Make)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Stock)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsInSale)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SalePrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ThumbnailSource)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Make)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Stock)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsInSale)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SalePrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ThumbnailSource)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+<h2>@ViewData["Title"]</h2>
+@if (User.IsInRole("Admin"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
 }
-    </tbody>
-</table>
+    <div class="card-group">
+        @foreach (var item in Model)
+        {
+            <div class="col-lg-3 col-md-3 col-sm-2 col-xs-6">
+                <div class="card">
+                    <img class="card-img-top" src=@item.ThumbnailSource id="product-img">
+                    <div class="card-body">
+                        <h5 class="card-title">@item.Name</h5>
+                        <p class="card-text">@item.Description</p>
+                        <p class="card-text"><small class="text-muted">@item.Price</small></p>
+                        <p class="card-text"><small class="text-muted"><button class="btn-primary" id="submit-btn">Купи</button></small></p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
