--- a/OnlineFishShop.Web/Views/Shared/_LoginPartial.cshtml
+++ b/OnlineFishShop.Web/Views/Shared/_LoginPartial.cshtml
@@ -13,10 +13,10 @@
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav">
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@OnlineFishShopResources.lblHello @UserManager.GetUserName(User)!</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"  style="color:#0c4a60">@OnlineFishShopResources.lblHello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link" style="color:#abdff1">@OnlineFishShopResources.lblLogout</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link" style="color:#0c4a60">@OnlineFishShopResources.lblLogout</button>
             </li>
         </ul>
     </form>
@@ -24,7 +24,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="Identity" asp-page="/Account/Register">@OnlineFishShopResources.lblRegister</a></li>
-        <li><a asp-area="Identity" asp-page="/Account/Login">@OnlineFishShopResources.lblLogin</a></li>
+        <li style="color:#0c4a60"><a asp-area="Identity" asp-page="/Account/Register">@OnlineFishShopResources.lblRegister</a></li>
+        <li style="color:#0c4a60"><a asp-area="Identity" asp-page="/Account/Login">@OnlineFishShopResources.lblLogin</a></li>
     </ul>
 }
