--- a/OnlineFishShop.Web/Views/Shared/_LoginPartial.cshtml
+++ b/OnlineFishShop.Web/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
                 <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"  style="color:#0c4a60">@OnlineFishShopResources.lblHello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link" style="color:#0c4a60">@OnlineFishShopResources.lblLogout</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link" style="color:white">@OnlineFishShopResources.lblLogout</button>
             </li>
         </ul>
     </form>
