Home page text over image
Text over the image in the home page - text shadow added.

--- a/OnlineFishShop.Web/Views/Home/Index.cshtml
+++ b/OnlineFishShop.Web/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="container-fluid">
 
     <div class="row" id="home-image">
-
+        <h2 class="centered">Само на<br /> един клик разстояние <br /> от теб!</h2>
     </div>
     <h1 class="page-subtitle">@OnlineFishShopResources.lblTheSilvexShop</h1>
     <h2 class="page-title">@Html.Raw(@OnlineFishShopResources.lblHomeDescription)</h2>
